[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://background.jpg" type="Texture" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://MobPath.gd" type="Script" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1920, 0, 0, 0, 0, 0, 1920, 1070, 0, 0, 0, 0, 0, 1070, 0, 0, 0, 0, 0, 0 )
}
_sections_unfolded = [ "Resource" ]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 960, 540 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Player" parent="." index="1" instance=ExtResource( 4 )]

position = Vector2( 1020, 610 )

[node name="StartTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="MobTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="StartPosition" type="Position2D" parent="." index="4"]

position = Vector2( 1000, 580 )

[node name="MobPath" type="Path2D" parent="." index="5"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )
script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="HUD" parent="." index="6" instance=ExtResource( 6 )]

[connection signal="hit" from="Player" to="." method="game_over"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]

[connection signal="start_game" from="HUD" to="." method="new_game"]


